--- a/css/structures/_grid.css
+++ b/css/structures/_grid.css
@@ -20,6 +20,22 @@
         --grid-item-width: 860px;
     }
 
+    &.\@ {
+        gap: var(--gap-1);
+    }
+    &.\@\@ {
+        gap: var(--gap-2);
+    }
+    &.\@\@\@ {
+        gap: var(--gap-3);
+    }
+    &.\@\@\@\@ {
+        gap: var(--gap-4);
+    }
+    &.\@\@\@\@\@ {
+        gap: var(--gap-5);
+    }
+
     &.masonry {
         grid-template-rows: masonry;
     }
