--- a/css/utils/_colors.css
+++ b/css/utils/_colors.css
@@ -13,7 +13,16 @@
 }
 
 @media (color-gamut: p3) {
-    /* Do colorful stuff. */
+    --accent-1: oklch(89.29% 0.174 163.8);
+    --accent-2: oklch(95.98% 0.114 123.06);
+    --accent-3: oklch(71.16% 0.181 22.84);
+}
+
+@media (forced-colors: active) {
+    svg {
+        /* Automatically adjust the SVG to pick up the text color for High Contrast mode */
+        forced-color-adjust: auto;
+    }
 }
 
 .red-emoji-check {
