--- a/css/utils/_theme.css
+++ b/css/utils/_theme.css
@@ -3,10 +3,9 @@
     accent-color: var(--accent-1);
     --bg: var(--gray-1);
     --color: var(--gray-5);
-    --color-secondary: var(--gray-3);
     --border-color: var(--gray-2);
     --shadow: 0 0.2px 0.3px rgba(0, 0, 0, 0.024), 0 0.6px 0.9px rgba(0, 0, 0, 0.035), 0 1.5px 2.1px rgba(0, 0, 0, 0.046), 0 5px 7px rgba(0, 0, 0, 0.07);
-    --border-width: 2px;
+    --border-width: 0.1em;
     --border-radius: 0.3em;
 }
 
@@ -31,16 +30,24 @@ body {
     Color aware surface
 */
 .paper {
+    padding: var(--gap-1);
     background-color: var(--bg);
-    &.\! {
+    &.-accent-1 {
         background-color: var(--accent-1);
     }
-    &.\!\! {
+    &.-accent-2 {
         color: var(--color);
         background-color: var(--accent-2);
     }
-    &.\!\!\! {
+    &.-accent-3 {
         color: var(--color);
         background-color: var(--accent-3);
+    }
+    /*  
+        fyi: POSTCSS require styles applied before 
+        @nest-ed selectors 
+    */
+    @nest .dark-theme &.-accent-3 {
+        background-color: var(--gray-2);
     }
 }
