--- a/css/structures/_grid.css
+++ b/css/structures/_grid.css
@@ -15,42 +15,19 @@
     align-items: start;
     grid-template-columns: repeat(auto-fit, minmax(min(100%, var(--grid-item-width)), 1fr));
 
-    &.\# {
+    &.-md {
         --grid-item-width: var(--item-grid-md);
     }
-    &.\#\# {
+    &.-lg {
         --grid-item-width: var(--item-grid-lg);
     }
-    &.\#\#\# {
+    &.-xl {
         --grid-item-width: var(--item-grid-xl);
     }
 
-    &.\@ {
-        gap: var(--gap-1);
-    }
-    &.\@\@ {
-        gap: var(--gap-2);
-    }
-    &.\@\@\@ {
-        gap: var(--gap-3);
-    }
-    &.\@\@\@\@ {
-        gap: var(--gap-4);
-    }
-    &.\@\@\@\@\@ {
-        gap: var(--gap-5);
-    }
-
-    &.masonry {
+    &.-masonry {
         grid-template-rows: masonry;
     }
-}
-
-.grid-column {
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-
-    height: 100vh;
 }
 
 /*
@@ -65,62 +42,62 @@
         display: grid;
         place-items: center;
 
-        &.\# {
+        &.-col-12 {
             grid-column: 1 / span 12;
         }
 
-        &.\#\# {
-            &.-a {
+        &.-col-6 {
+            &.-span-0-6 {
                 grid-column: 1 / span 6;
             }
-            &.-b {
+            &.-span-6-12 {
                 grid-column: 7 / span 6;
             }
         }
 
-        &.\#\#\# {
-            &.-a {
+        &.-col-4 {
+            &.-span-0-4 {
                 grid-column: 1 / span 4;
             }
-            &.-b {
+            &.-span-4-8 {
                 grid-column: 5 / span 4;
             }
-            &.-c {
+            &.-span-8-12 {
                 grid-column: 9 / span 4;
             }
         }
 
-        &.\#\#\#\# {
-            &.-a {
+        &.-col-3 {
+            &.-span-0-3 {
                 grid-column: 1 / span 3;
             }
-            &.-b {
+            &.-span-3-6 {
                 grid-column: 4 / span 3;
             }
-            &.-c {
+            &.-span-6-9 {
                 grid-column: 7 / span 3;
             }
-            &.-d {
+            &.-span-9-12 {
                 grid-column: 10 / span 3;
             }
         }
-        &.\#\#\#\#\# {
-            &.-a {
+        &.-col-2 {
+            &.-span-0-2 {
                 grid-column: 1 / span 2;
             }
-            &.-b {
+            &.-span-2-4 {
                 grid-column: 3 / span 2;
             }
-            &.-c {
+            &.-span-4-6 {
                 grid-column: 5 / span 2;
             }
-            &.-d {
+            &.-span-6-8 {
                 grid-column: 7 / span 2;
             }
-            &.-e {
+            &.-span-8-10 {
                 grid-column: 9 / span 2;
             }
-            &.-f {
+            &.-span-10-12 {
                 grid-column: 11 / span 2;
             }
         }
