feat : bump version 2.1.0

--- a/css/features.css
+++ b/css/features.css
@@ -3,5 +3,7 @@
 */
 @import 'features/ads/_banner';
 @import 'features/dashboard/_layout';
+@import 'features/dashboard/_container';
 @import 'features/topics/_article';
 @import 'features/topics/_hero';
+@import 'features/topics/_featured';
